import outdent from 'outdent';
import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'a { font-family: Arial, Helvetica, sans-serif; }',
		'a { FONT-FAMILY: Arial, serif; }',
		outdent`
			a {
				font-family:
					"cursive", cursive,
					"fantasy", fantasy,
					"math", math,
					"monospace", monospace,
					"sans-serif", sans-serif,
					"serif", serif,
					"system-ui", system-ui,
					"ui-monospace", ui-monospace,
					"ui-rounded", ui-rounded,
					"ui-sans-serif", ui-sans-serif,
					"ui-serif", ui-serif;
			}
		`,
		String.raw`a { font-family: "serif", s\65 rif; }`,
		'a { font-family: "-webkit-body", -webkit-body; }',
		'a { font-family: "-webkit-pictograph", -webkit-pictograph; }',
		'a { font-family: "-moz-fixed", -moz-fixed; }',
		'a { font-family: "mono", mono; }',
		'a { font-family: "sans", sans; }',
		'a { font-family: Times New Roman, "  times   new roman  ", serif; }',
		'a { font-family: Times New Roman, "Times  New Roman", serif; }',
		String.raw`a { font-family: Times\20 \20 New, "Times New", serif; }`,
		'a { font-family: Straße, STRASSE; }',
		'a { font-family: generic(fangsong), generic(kai), serif; }',
		'a { font-family: "generic(fangsong)", generic(fangsong); }',
		'a { font-family: var(--fonts), Arial, sans-serif; }',
		'a { font-family: inherit; }',
		'a { font: italic 16px Arial, sans-serif; }',
		'a { font: 16px "serif", serif; }',
		'a { font: caption; }',
		'a { font: revert-layer; }',
		'a { font: var(--size) Arial, Arial; }',
		'a { --font-family: Arial, Arial; }',
		'@font-face { font-family: Arial, Arial; }',
		'@media (width > 1px) { @font-face { font-family: Arial, Arial; } }',
		'@font-palette-values --palette { font-family: Arial, Arial; }',
		'.foo { @supports (font-family: Arial, Arial) { color: red; } }',
		'.foo { @container style(font-family: Arial, Arial) { color: red; } }',
		'a { font-family: inherit, inherit; }',
		'a { font-family: default, default; }',
		'a { font-family: caption, caption; }',
		'a { font-family: revert-rule, revert-rule; }',
		String.raw`a { font-family: "Arial inherit", Arial \69 nherit; }`,
		'a { font-family: "Arial serif", Arial serif; }',
		String.raw`a { font-family: "Arial serif", Arial s\65 rif; }`,
		// Repeating the `monospace` generic avoids the smaller default monospace font size.
		'code { font-family: monospace, monospace; }',
		'code { font-family: MONOSPACE, monospace; }',
		'code { font-family: monospace, monospace, monospace; }',
		'code { font: 1em monospace, monospace; }',
		// CSS Modules interop blocks are read by JavaScript as exact strings.
		':export { font-family: Arial, Arial, sans-serif; }',
		':import("./theme.css") { font-family: Arial, Arial; }',
	],
	invalid: [
		'a { font-family: Arial, Arial, sans-serif; }',
		'a { font-family: Arial, Helvetica, Arial, sans-serif; }',
		'a { font-family: "Arial", arial, sans-serif; }',
		'a { font-family: \'Arial\', arial, sans-serif; }',
		String.raw`a { f\6f nt-family: Arial, Arial, sans-serif; }`,
		String.raw`a { f\6f nt: 16px Arial, Arial, sans-serif; }`,
		'.foo { @media (width > 1px) { font-family: Arial, Arial, sans-serif; } }',
		'@keyframes switch-font { from { font-family: Arial, Arial; } }',
		'a { font-family: Times New Roman, "times new roman", serif; }',
		String.raw`a { font-family: Times New Roman, "Times\20 New Roman", serif; }`,
		String.raw`a { font-family: A\72 ial, Arial, sans-serif; }`,
		String.raw`a { font-family: Times\20 New\20 Roman, "Times New Roman", serif; }`,
		String.raw`a { font-family: "\41 rial", Arial, sans-serif; }`,
		String.raw`a { font-family: Arial, "A\
rial", sans-serif; }`,
		'a { font-family: SERIF, serif; }',
		'a { font-family: serif, serif; }',
		'a { font-family: ui-monospace, ui-monospace; }',
		'a { font-family: "monospace", "monospace"; }',
		'a { font-family: "monospace", monospace, "Monospace"; }',
		String.raw`a { font-family: s\65 rif, serif; }`,
		'a { font-family: "serif", serif, "SERIF"; }',
		'a { font-family: "emoji", emoji, sans-serif; }',
		'a { font-family: "fangsong", fangsong, serif; }',
		'a { font-family: "BlinkMacSystemFont", BlinkMacSystemFont; }',
		'a { font-family: "-webkit-standard", -webkit-standard; }',
		'a { font-family: "BlinkMacSystemFont", var(--fonts), BlinkMacSystemFont; }',
		'a { font-family: "-apple-system", var(--fonts), -apple-system; }',
		'a { font: 16px "Custom -moz-fixed", Custom -moz-fixed; }',
		'a { font-family: "Noto Sans", Noto Sans; }',
		'a { font-family: "Roboto Mono", Roboto Mono; }',
		'a { font-family: generic(fangsong), GENERIC(FANGSONG), serif; }',
		String.raw`a { font-family: g\65 neric(f\61 ngsong), generic(fangsong); }`,
		'a { font-family: generic(khmer-mul), GENERIC(KHMER-MUL); }',
		String.raw`a { font-family: foo\,bar, "foo,bar", serif; }`,
		'a { font: 16px generic(fangsong), GENERIC(FANGSONG); }',
		'a { font: italic 16px italic, italic; }',
		'a { font: 16px Arial, Arial, sans-serif; }',
		'a { FONT: 16px Arial, serif, ARIAL; }',
		'a { font: 16px Arial, Arial, ARIAL; }',
		String.raw`a { font: 16px A\72 ial, Arial, sans-serif; }`,
		'a { font: 16px Arial, /* duplicate */ Arial, sans-serif; }',
		'a { font: 16px Arial, Arial /* duplicate */ !important; }',
		'a { font: italic small-caps 700 condensed 16px/1.5 Times New Roman, "times new roman", serif; }',
		'a { font-family: Arial, var(--fonts), arial, sans-serif; }',
		'a { font-family: Arial, Arial, ARIAL; }',
		'a { font-family: Arial /* first */, Arial, sans-serif; }',
		'a { font-family: Arial, /* duplicate */ Arial, sans-serif; }',
		'a { font-family: Arial, Arial /* duplicate */, sans-serif; }',
		'a { font-family: Arial, Arial /* duplicate */ !important; }',
		'a { font-family: Times New Roman, Times /* duplicate */ New Roman, serif; }',
		outdent`
			a {
				font-family:
					Arial,
					Arial,
					sans-serif;
			}
		`,
		'.a:export { font-family: Arial, Arial, sans-serif; }',
	],
});

test({
	valid: [],
	invalid: [
		{
			code: 'a { font-family: Arial, Arial, ARIAL; }',
			output: 'a { font-family: Arial, ARIAL; }',
			errors: 2,
		},
		{
			code: 'a { font: 16px Arial, Arial, ARIAL; }',
			output: 'a { font: 16px Arial, ARIAL; }',
			errors: 2,
		},
		{
			code: 'a { font-family: Arial, Arial !important /* keep */; }',
			output: 'a { font-family: Arial !important /* keep */; }',
			errors: 1,
		},
		{
			code: 'a { font: 16px Arial, Arial !important /* keep */; }',
			output: 'a { font: 16px Arial !important /* keep */; }',
			errors: 1,
		},
		{
			code: 'a { font-family: Arial, Arial, /* next */ sans-serif; }',
			output: 'a { font-family: Arial, /* next */ sans-serif; }',
			errors: 1,
		},
		{
			code: String.raw`a { font-family: "foo\A \1b [31m\9b 31m\2028 \2029 \202e bar", "foo\A \1b [31m\9b 31m\2028 \2029 \202e bar"; }`,
			output: String.raw`a { font-family: "foo\A \1b [31m\9b 31m\2028 \2029 \202e bar"; }`,
			errors: [{message: 'Remove duplicate font family name `foo\\n\\u001b[31m\\u{9b}31m\\u{2028}\\u{2029}\\u{202e}bar`.'}],
		},
	],
});
