exports[`invalid(1): a { font-family: Arial, Arial, sans-serif; } 1`] = `

  1 | a { font-family: Arial, Arial, sans-serif; }

`;

exports[`invalid(1): a { font-family: Arial, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: Arial, Arial, sans-serif; }
    |                         ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font-family: Arial, sans-serif; }

`;

exports[`invalid(10): a { font-family: Times New Roman, \"Times\\20 New Roman\", serif; } 1`] = `

  1 | a { font-family: Times New Roman, "Times\\20 New Roman", serif; }

`;

exports[`invalid(10): a { font-family: Times New Roman, \"Times\\20 New Roman\", serif; } 2`] = `

Message:
> 1 | a { font-family: Times New Roman, "Times\\20 New Roman", serif; }
    |                                   ^^^^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`Times New Roman\`.

Output:
  1 | a { font-family: Times New Roman, serif; }

`;

exports[`invalid(11): a { font-family: A\\72 ial, Arial, sans-serif; } 1`] = `

  1 | a { font-family: A\\72 ial, Arial, sans-serif; }

`;

exports[`invalid(11): a { font-family: A\\72 ial, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: A\\72 ial, Arial, sans-serif; }
    |                            ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font-family: A\\72 ial, sans-serif; }

`;

exports[`invalid(12): a { font-family: Times\\20 New\\20 Roman, \"Times New Roman\", serif; } 1`] = `

  1 | a { font-family: Times\\20 New\\20 Roman, "Times New Roman", serif; }

`;

exports[`invalid(12): a { font-family: Times\\20 New\\20 Roman, \"Times New Roman\", serif; } 2`] = `

Message:
> 1 | a { font-family: Times\\20 New\\20 Roman, "Times New Roman", serif; }
    |                                         ^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`Times New Roman\`.

Output:
  1 | a { font-family: Times\\20 New\\20 Roman, serif; }

`;

exports[`invalid(13): a { font-family: \"\\41 rial\", Arial, sans-serif; } 1`] = `

  1 | a { font-family: "\\41 rial", Arial, sans-serif; }

`;

exports[`invalid(13): a { font-family: \"\\41 rial\", Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: "\\41 rial", Arial, sans-serif; }
    |                              ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font-family: "\\41 rial", sans-serif; }

`;

exports[`invalid(14): a { font-family: Arial, \"A\\\nrial\", sans-serif; } 1`] = `

  1 | a { font-family: Arial, "A\\
  2 | rial", sans-serif; }

`;

exports[`invalid(14): a { font-family: Arial, \"A\\\nrial\", sans-serif; } 2`] = `

Message:
> 1 | a { font-family: Arial, "A\\
    |                         ^^^
> 2 | rial", sans-serif; }
    | ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font-family: Arial, sans-serif; }

`;

exports[`invalid(15): a { font-family: SERIF, serif; } 1`] = `

  1 | a { font-family: SERIF, serif; }

`;

exports[`invalid(15): a { font-family: SERIF, serif; } 2`] = `

Message:
> 1 | a { font-family: SERIF, serif; }
    |                         ^^^^^ Remove duplicate font family name \`serif\`.

Output:
  1 | a { font-family: SERIF; }

`;

exports[`invalid(16): a { font-family: serif, serif; } 1`] = `

  1 | a { font-family: serif, serif; }

`;

exports[`invalid(16): a { font-family: serif, serif; } 2`] = `

Message:
> 1 | a { font-family: serif, serif; }
    |                         ^^^^^ Remove duplicate font family name \`serif\`.

Output:
  1 | a { font-family: serif; }

`;

exports[`invalid(17): a { font-family: ui-monospace, ui-monospace; } 1`] = `

  1 | a { font-family: ui-monospace, ui-monospace; }

`;

exports[`invalid(17): a { font-family: ui-monospace, ui-monospace; } 2`] = `

Message:
> 1 | a { font-family: ui-monospace, ui-monospace; }
    |                                ^^^^^^^^^^^^ Remove duplicate font family name \`ui-monospace\`.

Output:
  1 | a { font-family: ui-monospace; }

`;

exports[`invalid(18): a { font-family: \"monospace\", \"monospace\"; } 1`] = `

  1 | a { font-family: "monospace", "monospace"; }

`;

exports[`invalid(18): a { font-family: \"monospace\", \"monospace\"; } 2`] = `

Message:
> 1 | a { font-family: "monospace", "monospace"; }
    |                               ^^^^^^^^^^^ Remove duplicate font family name \`monospace\`.

Output:
  1 | a { font-family: "monospace"; }

`;

exports[`invalid(19): a { font-family: \"monospace\", monospace, \"Monospace\"; } 1`] = `

  1 | a { font-family: "monospace", monospace, "Monospace"; }

`;

exports[`invalid(19): a { font-family: \"monospace\", monospace, \"Monospace\"; } 2`] = `

Message:
> 1 | a { font-family: "monospace", monospace, "Monospace"; }
    |                                          ^^^^^^^^^^^ Remove duplicate font family name \`Monospace\`.

Output:
  1 | a { font-family: "monospace", monospace; }

`;

exports[`invalid(2): a { font-family: Arial, Helvetica, Arial, sans-serif; } 1`] = `

  1 | a { font-family: Arial, Helvetica, Arial, sans-serif; }

`;

exports[`invalid(2): a { font-family: Arial, Helvetica, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: Arial, Helvetica, Arial, sans-serif; }
    |                                    ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font-family: Arial, Helvetica, sans-serif; }

`;

exports[`invalid(20): a { font-family: s\\65 rif, serif; } 1`] = `

  1 | a { font-family: s\\65 rif, serif; }

`;

exports[`invalid(20): a { font-family: s\\65 rif, serif; } 2`] = `

Message:
> 1 | a { font-family: s\\65 rif, serif; }
    |                            ^^^^^ Remove duplicate font family name \`serif\`.

Output:
  1 | a { font-family: s\\65 rif; }

`;

exports[`invalid(21): a { font-family: \"serif\", serif, \"SERIF\"; } 1`] = `

  1 | a { font-family: "serif", serif, "SERIF"; }

`;

exports[`invalid(21): a { font-family: \"serif\", serif, \"SERIF\"; } 2`] = `

Message:
> 1 | a { font-family: "serif", serif, "SERIF"; }
    |                                  ^^^^^^^ Remove duplicate font family name \`SERIF\`.

Output:
  1 | a { font-family: "serif", serif; }

`;

exports[`invalid(22): a { font-family: \"emoji\", emoji, sans-serif; } 1`] = `

  1 | a { font-family: "emoji", emoji, sans-serif; }

`;

exports[`invalid(22): a { font-family: \"emoji\", emoji, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: "emoji", emoji, sans-serif; }
    |                           ^^^^^ Remove duplicate font family name \`emoji\`.

Output:
  1 | a { font-family: "emoji", sans-serif; }

`;

exports[`invalid(23): a { font-family: \"fangsong\", fangsong, serif; } 1`] = `

  1 | a { font-family: "fangsong", fangsong, serif; }

`;

exports[`invalid(23): a { font-family: \"fangsong\", fangsong, serif; } 2`] = `

Message:
> 1 | a { font-family: "fangsong", fangsong, serif; }
    |                              ^^^^^^^^ Remove duplicate font family name \`fangsong\`.

Output:
  1 | a { font-family: "fangsong", serif; }

`;

exports[`invalid(24): a { font-family: \"BlinkMacSystemFont\", BlinkMacSystemFont; } 1`] = `

  1 | a { font-family: "BlinkMacSystemFont", BlinkMacSystemFont; }

`;

exports[`invalid(24): a { font-family: \"BlinkMacSystemFont\", BlinkMacSystemFont; } 2`] = `

Message:
> 1 | a { font-family: "BlinkMacSystemFont", BlinkMacSystemFont; }
    |                                        ^^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`BlinkMacSystemFont\`.

Output:
  1 | a { font-family: "BlinkMacSystemFont"; }

`;

exports[`invalid(25): a { font-family: \"-webkit-standard\", -webkit-standard; } 1`] = `

  1 | a { font-family: "-webkit-standard", -webkit-standard; }

`;

exports[`invalid(25): a { font-family: \"-webkit-standard\", -webkit-standard; } 2`] = `

Message:
> 1 | a { font-family: "-webkit-standard", -webkit-standard; }
    |                                      ^^^^^^^^^^^^^^^^ Remove duplicate font family name \`-webkit-standard\`.

Output:
  1 | a { font-family: "-webkit-standard"; }

`;

exports[`invalid(26): a { font-family: \"BlinkMacSystemFont\", var(--fonts), BlinkMacSystemFont; } 1`] = `

  1 | a { font-family: "BlinkMacSystemFont", var(--fonts), BlinkMacSystemFont; }

`;

exports[`invalid(26): a { font-family: \"BlinkMacSystemFont\", var(--fonts), BlinkMacSystemFont; } 2`] = `

Message:
> 1 | a { font-family: "BlinkMacSystemFont", var(--fonts), BlinkMacSystemFont; }
    |                                                      ^^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`BlinkMacSystemFont\`.

Output:
  1 | a { font-family: "BlinkMacSystemFont", var(--fonts); }

`;

exports[`invalid(27): a { font-family: \"-apple-system\", var(--fonts), -apple-system; } 1`] = `

  1 | a { font-family: "-apple-system", var(--fonts), -apple-system; }

`;

exports[`invalid(27): a { font-family: \"-apple-system\", var(--fonts), -apple-system; } 2`] = `

Message:
> 1 | a { font-family: "-apple-system", var(--fonts), -apple-system; }
    |                                                 ^^^^^^^^^^^^^ Remove duplicate font family name \`-apple-system\`.

Output:
  1 | a { font-family: "-apple-system", var(--fonts); }

`;

exports[`invalid(28): a { font: 16px \"Custom -moz-fixed\", Custom -moz-fixed; } 1`] = `

  1 | a { font: 16px "Custom -moz-fixed", Custom -moz-fixed; }

`;

exports[`invalid(28): a { font: 16px \"Custom -moz-fixed\", Custom -moz-fixed; } 2`] = `

Message:
> 1 | a { font: 16px "Custom -moz-fixed", Custom -moz-fixed; }
    |                                     ^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`Custom -moz-fixed\`.

Output:
  1 | a { font: 16px "Custom -moz-fixed"; }

`;

exports[`invalid(29): a { font-family: \"Noto Sans\", Noto Sans; } 1`] = `

  1 | a { font-family: "Noto Sans", Noto Sans; }

`;

exports[`invalid(29): a { font-family: \"Noto Sans\", Noto Sans; } 2`] = `

Message:
> 1 | a { font-family: "Noto Sans", Noto Sans; }
    |                               ^^^^^^^^^ Remove duplicate font family name \`Noto Sans\`.

Output:
  1 | a { font-family: "Noto Sans"; }

`;

exports[`invalid(3): a { font-family: \"Arial\", arial, sans-serif; } 1`] = `

  1 | a { font-family: "Arial", arial, sans-serif; }

`;

exports[`invalid(3): a { font-family: \"Arial\", arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: "Arial", arial, sans-serif; }
    |                           ^^^^^ Remove duplicate font family name \`arial\`.

Output:
  1 | a { font-family: "Arial", sans-serif; }

`;

exports[`invalid(30): a { font-family: \"Roboto Mono\", Roboto Mono; } 1`] = `

  1 | a { font-family: "Roboto Mono", Roboto Mono; }

`;

exports[`invalid(30): a { font-family: \"Roboto Mono\", Roboto Mono; } 2`] = `

Message:
> 1 | a { font-family: "Roboto Mono", Roboto Mono; }
    |                                 ^^^^^^^^^^^ Remove duplicate font family name \`Roboto Mono\`.

Output:
  1 | a { font-family: "Roboto Mono"; }

`;

exports[`invalid(31): a { font-family: generic(fangsong), GENERIC(FANGSONG), serif; } 1`] = `

  1 | a { font-family: generic(fangsong), GENERIC(FANGSONG), serif; }

`;

exports[`invalid(31): a { font-family: generic(fangsong), GENERIC(FANGSONG), serif; } 2`] = `

Message:
> 1 | a { font-family: generic(fangsong), GENERIC(FANGSONG), serif; }
    |                                     ^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`generic(FANGSONG)\`.

Output:
  1 | a { font-family: generic(fangsong), serif; }

`;

exports[`invalid(32): a { font-family: g\\65 neric(f\\61 ngsong), generic(fangsong); } 1`] = `

  1 | a { font-family: g\\65 neric(f\\61 ngsong), generic(fangsong); }

`;

exports[`invalid(32): a { font-family: g\\65 neric(f\\61 ngsong), generic(fangsong); } 2`] = `

Message:
> 1 | a { font-family: g\\65 neric(f\\61 ngsong), generic(fangsong); }
    |                                           ^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`generic(fangsong)\`.

Output:
  1 | a { font-family: g\\65 neric(f\\61 ngsong); }

`;

exports[`invalid(33): a { font-family: generic(khmer-mul), GENERIC(KHMER-MUL); } 1`] = `

  1 | a { font-family: generic(khmer-mul), GENERIC(KHMER-MUL); }

`;

exports[`invalid(33): a { font-family: generic(khmer-mul), GENERIC(KHMER-MUL); } 2`] = `

Message:
> 1 | a { font-family: generic(khmer-mul), GENERIC(KHMER-MUL); }
    |                                      ^^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`generic(KHMER-MUL)\`.

Output:
  1 | a { font-family: generic(khmer-mul); }

`;

exports[`invalid(34): a { font-family: foo\\,bar, \"foo,bar\", serif; } 1`] = `

  1 | a { font-family: foo\\,bar, "foo,bar", serif; }

`;

exports[`invalid(34): a { font-family: foo\\,bar, \"foo,bar\", serif; } 2`] = `

Message:
> 1 | a { font-family: foo\\,bar, "foo,bar", serif; }
    |                            ^^^^^^^^^ Remove duplicate font family name \`foo,bar\`.

Output:
  1 | a { font-family: foo\\,bar, serif; }

`;

exports[`invalid(35): a { font: 16px generic(fangsong), GENERIC(FANGSONG); } 1`] = `

  1 | a { font: 16px generic(fangsong), GENERIC(FANGSONG); }

`;

exports[`invalid(35): a { font: 16px generic(fangsong), GENERIC(FANGSONG); } 2`] = `

Message:
> 1 | a { font: 16px generic(fangsong), GENERIC(FANGSONG); }
    |                                   ^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`generic(FANGSONG)\`.

Output:
  1 | a { font: 16px generic(fangsong); }

`;

exports[`invalid(36): a { font: italic 16px italic, italic; } 1`] = `

  1 | a { font: italic 16px italic, italic; }

`;

exports[`invalid(36): a { font: italic 16px italic, italic; } 2`] = `

Message:
> 1 | a { font: italic 16px italic, italic; }
    |                               ^^^^^^ Remove duplicate font family name \`italic\`.

Output:
  1 | a { font: italic 16px italic; }

`;

exports[`invalid(37): a { font: 16px Arial, Arial, sans-serif; } 1`] = `

  1 | a { font: 16px Arial, Arial, sans-serif; }

`;

exports[`invalid(37): a { font: 16px Arial, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font: 16px Arial, Arial, sans-serif; }
    |                       ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font: 16px Arial, sans-serif; }

`;

exports[`invalid(38): a { FONT: 16px Arial, serif, ARIAL; } 1`] = `

  1 | a { FONT: 16px Arial, serif, ARIAL; }

`;

exports[`invalid(38): a { FONT: 16px Arial, serif, ARIAL; } 2`] = `

Message:
> 1 | a { FONT: 16px Arial, serif, ARIAL; }
    |                              ^^^^^ Remove duplicate font family name \`ARIAL\`.

Output:
  1 | a { FONT: 16px Arial, serif; }

`;

exports[`invalid(39): a { font: 16px Arial, Arial, ARIAL; } 1`] = `

  1 | a { font: 16px Arial, Arial, ARIAL; }

`;

exports[`invalid(39): a { font: 16px Arial, Arial, ARIAL; } 2`] = `

Message:
> 1 | a { font: 16px Arial, Arial, ARIAL; }
    |                       ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font: 16px Arial, ARIAL; }

`;

exports[`invalid(39): a { font: 16px Arial, Arial, ARIAL; } 3`] = `

Message:
> 1 | a { font: 16px Arial, Arial, ARIAL; }
    |                              ^^^^^ Remove duplicate font family name \`ARIAL\`.

Output:
  1 | a { font: 16px Arial, Arial; }

`;

exports[`invalid(4): a { font-family: 'Arial', arial, sans-serif; } 1`] = `

  1 | a { font-family: 'Arial', arial, sans-serif; }

`;

exports[`invalid(4): a { font-family: 'Arial', arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: 'Arial', arial, sans-serif; }
    |                           ^^^^^ Remove duplicate font family name \`arial\`.

Output:
  1 | a { font-family: 'Arial', sans-serif; }

`;

exports[`invalid(40): a { font: 16px A\\72 ial, Arial, sans-serif; } 1`] = `

  1 | a { font: 16px A\\72 ial, Arial, sans-serif; }

`;

exports[`invalid(40): a { font: 16px A\\72 ial, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font: 16px A\\72 ial, Arial, sans-serif; }
    |                          ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font: 16px A\\72 ial, sans-serif; }

`;

exports[`invalid(41): a { font: 16px Arial, /* duplicate */ Arial, sans-serif; } 1`] = `

  1 | a { font: 16px Arial, /* duplicate */ Arial, sans-serif; }

`;

exports[`invalid(41): a { font: 16px Arial, /* duplicate */ Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font: 16px Arial, /* duplicate */ Arial, sans-serif; }
    |                                       ^^^^^ Remove duplicate font family name \`Arial\`.

`;

exports[`invalid(42): a { font: 16px Arial, Arial /* duplicate */ !important; } 1`] = `

  1 | a { font: 16px Arial, Arial /* duplicate */ !important; }

`;

exports[`invalid(42): a { font: 16px Arial, Arial /* duplicate */ !important; } 2`] = `

Message:
> 1 | a { font: 16px Arial, Arial /* duplicate */ !important; }
    |                       ^^^^^ Remove duplicate font family name \`Arial\`.

`;

exports[`invalid(43): a { font: italic small-caps 700 condensed 16px/1.5 Times New Roman, \"times new roman\", serif; } 1`] = `

  1 | a { font: italic small-caps 700 condensed 16px/1.5 Times New Roman, "times new roman", serif; }

`;

exports[`invalid(43): a { font: italic small-caps 700 condensed 16px/1.5 Times New Roman, \"times new roman\", serif; } 2`] = `

Message:
> 1 | a { font: italic small-caps 700 condensed 16px/1.5 Times New Roman, "times new roman", serif; }
    |                                                                     ^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`times new roman\`.

Output:
  1 | a { font: italic small-caps 700 condensed 16px/1.5 Times New Roman, serif; }

`;

exports[`invalid(44): a { font-family: Arial, var(--fonts), arial, sans-serif; } 1`] = `

  1 | a { font-family: Arial, var(--fonts), arial, sans-serif; }

`;

exports[`invalid(44): a { font-family: Arial, var(--fonts), arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: Arial, var(--fonts), arial, sans-serif; }
    |                                       ^^^^^ Remove duplicate font family name \`arial\`.

Output:
  1 | a { font-family: Arial, var(--fonts), sans-serif; }

`;

exports[`invalid(45): a { font-family: Arial, Arial, ARIAL; } 1`] = `

  1 | a { font-family: Arial, Arial, ARIAL; }

`;

exports[`invalid(45): a { font-family: Arial, Arial, ARIAL; } 2`] = `

Message:
> 1 | a { font-family: Arial, Arial, ARIAL; }
    |                         ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font-family: Arial, ARIAL; }

`;

exports[`invalid(45): a { font-family: Arial, Arial, ARIAL; } 3`] = `

Message:
> 1 | a { font-family: Arial, Arial, ARIAL; }
    |                                ^^^^^ Remove duplicate font family name \`ARIAL\`.

Output:
  1 | a { font-family: Arial, Arial; }

`;

exports[`invalid(46): a { font-family: Arial /* first */, Arial, sans-serif; } 1`] = `

  1 | a { font-family: Arial /* first */, Arial, sans-serif; }

`;

exports[`invalid(46): a { font-family: Arial /* first */, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: Arial /* first */, Arial, sans-serif; }
    |                                     ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { font-family: Arial /* first */, sans-serif; }

`;

exports[`invalid(47): a { font-family: Arial, /* duplicate */ Arial, sans-serif; } 1`] = `

  1 | a { font-family: Arial, /* duplicate */ Arial, sans-serif; }

`;

exports[`invalid(47): a { font-family: Arial, /* duplicate */ Arial, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: Arial, /* duplicate */ Arial, sans-serif; }
    |                                         ^^^^^ Remove duplicate font family name \`Arial\`.

`;

exports[`invalid(48): a { font-family: Arial, Arial /* duplicate */, sans-serif; } 1`] = `

  1 | a { font-family: Arial, Arial /* duplicate */, sans-serif; }

`;

exports[`invalid(48): a { font-family: Arial, Arial /* duplicate */, sans-serif; } 2`] = `

Message:
> 1 | a { font-family: Arial, Arial /* duplicate */, sans-serif; }
    |                         ^^^^^ Remove duplicate font family name \`Arial\`.

`;

exports[`invalid(49): a { font-family: Arial, Arial /* duplicate */ !important; } 1`] = `

  1 | a { font-family: Arial, Arial /* duplicate */ !important; }

`;

exports[`invalid(49): a { font-family: Arial, Arial /* duplicate */ !important; } 2`] = `

Message:
> 1 | a { font-family: Arial, Arial /* duplicate */ !important; }
    |                         ^^^^^ Remove duplicate font family name \`Arial\`.

`;

exports[`invalid(5): a { f\\6f nt-family: Arial, Arial, sans-serif; } 1`] = `

  1 | a { f\\6f nt-family: Arial, Arial, sans-serif; }

`;

exports[`invalid(5): a { f\\6f nt-family: Arial, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { f\\6f nt-family: Arial, Arial, sans-serif; }
    |                            ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { f\\6f nt-family: Arial, sans-serif; }

`;

exports[`invalid(50): a { font-family: Times New Roman, Times /* duplicate */ New Roman, serif; } 1`] = `

  1 | a { font-family: Times New Roman, Times /* duplicate */ New Roman, serif; }

`;

exports[`invalid(50): a { font-family: Times New Roman, Times /* duplicate */ New Roman, serif; } 2`] = `

Message:
> 1 | a { font-family: Times New Roman, Times /* duplicate */ New Roman, serif; }
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`Times New Roman\`.

`;

exports[`invalid(51): a {\n\tfont-family:\n\t\tArial,\n\t\tArial,\n\t\tsans-serif;\n} 1`] = `

  1 | a {
  2 | 	font-family:
  3 | 		Arial,
  4 | 		Arial,
  5 | 		sans-serif;
  6 | }

`;

exports[`invalid(51): a {\n\tfont-family:\n\t\tArial,\n\t\tArial,\n\t\tsans-serif;\n} 2`] = `

Message:
  1 | a {
  2 | 	font-family:
  3 | 		Arial,
> 4 | 		Arial,
    | 		^^^^^ Remove duplicate font family name \`Arial\`.
  5 | 		sans-serif;
  6 | }

Output:
  1 | a {
  2 | 	font-family:
  3 | 		Arial,
  4 | 		sans-serif;
  5 | }

`;

exports[`invalid(52): .a:export { font-family: Arial, Arial, sans-serif; } 1`] = `

  1 | .a:export { font-family: Arial, Arial, sans-serif; }

`;

exports[`invalid(52): .a:export { font-family: Arial, Arial, sans-serif; } 2`] = `

Message:
> 1 | .a:export { font-family: Arial, Arial, sans-serif; }
    |                                 ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | .a:export { font-family: Arial, sans-serif; }

`;

exports[`invalid(6): a { f\\6f nt: 16px Arial, Arial, sans-serif; } 1`] = `

  1 | a { f\\6f nt: 16px Arial, Arial, sans-serif; }

`;

exports[`invalid(6): a { f\\6f nt: 16px Arial, Arial, sans-serif; } 2`] = `

Message:
> 1 | a { f\\6f nt: 16px Arial, Arial, sans-serif; }
    |                          ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | a { f\\6f nt: 16px Arial, sans-serif; }

`;

exports[`invalid(7): .foo { @media (width > 1px) { font-family: Arial, Arial, sans-serif; } } 1`] = `

  1 | .foo { @media (width > 1px) { font-family: Arial, Arial, sans-serif; } }

`;

exports[`invalid(7): .foo { @media (width > 1px) { font-family: Arial, Arial, sans-serif; } } 2`] = `

Message:
> 1 | .foo { @media (width > 1px) { font-family: Arial, Arial, sans-serif; } }
    |                                                   ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | .foo { @media (width > 1px) { font-family: Arial, sans-serif; } }

`;

exports[`invalid(8): @keyframes switch-font { from { font-family: Arial, Arial; } } 1`] = `

  1 | @keyframes switch-font { from { font-family: Arial, Arial; } }

`;

exports[`invalid(8): @keyframes switch-font { from { font-family: Arial, Arial; } } 2`] = `

Message:
> 1 | @keyframes switch-font { from { font-family: Arial, Arial; } }
    |                                                     ^^^^^ Remove duplicate font family name \`Arial\`.

Output:
  1 | @keyframes switch-font { from { font-family: Arial; } }

`;

exports[`invalid(9): a { font-family: Times New Roman, \"times new roman\", serif; } 1`] = `

  1 | a { font-family: Times New Roman, "times new roman", serif; }

`;

exports[`invalid(9): a { font-family: Times New Roman, \"times new roman\", serif; } 2`] = `

Message:
> 1 | a { font-family: Times New Roman, "times new roman", serif; }
    |                                   ^^^^^^^^^^^^^^^^^ Remove duplicate font family name \`times new roman\`.

Output:
  1 | a { font-family: Times New Roman, serif; }

`;
